--- a/css/home.scss
+++ b/css/home.scss
@@ -265,6 +265,7 @@ nav {
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: 'Orbitron', sans-serif;
+    color: #323232;
   }
   .conteiner_content_img {
     float: left;
