--- a/templates/achivements/tabs.html
+++ b/templates/achivements/tabs.html
@@ -30,7 +30,7 @@
       <div class="d-col-info">
         <div class="center-info">
           <span>Сложность:</span>
-          <div ng-bind-html="dungeon.Hard | hardStar | html"></div>
+          <div ng-bind-html="dungeon.Hard | hardStar | to_html"></div>
           <a href="{{dungeon.TacticsDungeon}}">Тактика</a>
           <br>
           <span>Местонахождение</span>
