--- a/templates/general/footer.html
+++ b/templates/general/footer.html
@@ -3,9 +3,10 @@
   <div class="footer-wrapper">
     <div class="footer__content">
       <div class="content-table copyright">
-        <a href="#/">
-          <img class="" src="/images/KymStroi.png" /></a>
-        <br /> Copyright © 2015 <br /> КумСтрой
+        <img class="" src="/images/KymStroi.png" />
+        <br /> Copyright © 2015 КумСтрой
+        <br/>
+        <a href="#/devs" class="dev__link">Связь с разработчиками</a>
       </div>
       <div class="content-table footer__logo">
         <div class="footer__logo_LogoText">Плохиши&nbsp;&nbsp;Bad Guys</div>
@@ -19,11 +20,10 @@
           <div class="site__map-left">
             <a href="#/" class="sitemap__link">Главная</a>
             <a href="#/achievements" class="sitemap__link">Данжи</a>
-            <a href="#/players_table" class="sitemap__link">Игроки</a>
           </div>
           <div class="site__map-right">
             <a href="#/projects" class="sitemap__link">Проекты</a>
-            <a href="#/about" class="sitemap__link">Помощи нет</a>
+            <a href="#/players_table" class="sitemap__link">Игроки</a>
           </div>
         </div>
       </div>
