--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,13 +28,12 @@
         <div class="col-width news__conteiner">
           <div class="conteiner_content_img hidden-xs">
             <div class="content__img">
-            <img alt="logo" ng-src={{new.image}}>
+              <img alt="logo" ng-src={{new.image}}>
             </div>
           </div>
           <p class="myhead__text">{{new.headtext}}</p>
           <span class="myhead__date">{{new.date  | date:'dd-MM-yyyy'}}</span>
           <p class="content__text">{{new.contenttext}}</p>
-          <button type="button" class="btn btn-link pull-right">Читать далее</button>
         </div>
       </div>
     </div>
@@ -45,12 +44,14 @@
           <ul>
             <li>
               <div class="voice-chat_sprite team-speak"></div>
-              <span>TeamSpeak</span><br>
+              <span>TeamSpeak</span>
+              <br>
               <span>199.175.48.21</span>
             </li>
             <li>
               <div class="voice-chat_sprite mumble"></div>
-              <span>Mumble</span><br>
+              <span>Mumble</span>
+              <br>
               <span>598362345</span>
             </li>
           </ul>
