--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+@import "ngGallery.scss";
+
 @import "home.scss";
 
 @import "general/footer.scss";
@@ -11,3 +13,4 @@
 @import "playersTable.scss";
 @import "projects.scss";
 @import "playerDetail.scss";
+
